delete: todos routes, controllers & model
