# app/models/todo.model.js
@@ -1,12 +1,0 @@
-const mongoose = require("mongoose");
-
-const TodoSchema = new mongoose.Schema({
-    userId: String,
-    title: String,
-    completed: Boolean,
-    date: Date
-  })
-
-const Todo = mongoose.model("Todo", TodoSchema);
-
-module.exports = Todo;
